feat: pay mortgage with mana (#295)
# Features

- Ability to pay mortgages with MANA
- Mortgage's outstanding amount computed in real time
- Add `interest_rate` and `punitory_interest_rate` and `paid` columns 


# Notes

Must truncate mortgage table in order to run migrations

`npm run cli truncate mortgages`
`npm run migrate up`

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -149,6 +149,7 @@
     "amount_placeholder": "Amount in MANA",
     "cancel": "Cancel Mortgage",
     "claim": "Claim parcel",
+    "defaulted_in": "Defaulted in",
     "duration": "Duration",
     "duration_placeholder": "Duration in days",
     "errors": {
@@ -316,7 +317,7 @@
     "mana_approved":
       "You have authorized the {marketplace_contract_link} to operate MANA on your behalf",
     "marketplace_contract": "Marketplace contract",
-    "mortgage_creator_contract": "Mortgage creator contract",
+    "mortgage_helper_contract": "Mortgage helper contract",
     "mortgage_manager_contract": "Mortgage manager contract",
     "pending_tx": "You have a pending transaction",
     "unauthorize_land_check":
