--- a/src/Translation/locales/jp.json
+++ b/src/Translation/locales/jp.json
@@ -3,19 +3,19 @@
     "approve": "You can start by approving some MANA on your {settings_link}",
     "clear": {
       "body":
-        "Once you delete your transaction history you can't reverse the action, are you sure you want to continue?",
+        "一度、取引履歴を削除すると復旧できません。実行しますか？",
       "title": "取引履歴を削除"
     },
     "completed": "完了",
     "no_activity": "まだ取引がありません。.",
     "pending": "確認中",
-    "start": "You are able to start trading at the {marketplace}!"
+    "start": "{marketplace}で取引が出来るようになりました!"
   },
   "address": {
-    "its_you": "It's you"
+    "its_you": "あなたです。"
   },
   "atlas": {
-    "loading": "Loading",
+    "loading": "読込み中",
     "no_owner": "所有者なし",
     "on_sale": "販売中: ",
     "owner": "所有者: {owner}",
@@ -25,20 +25,20 @@
   },
   "buy_mana": {
     "action": "もっと購入する",
-    "amount_too_big": "This amount is too big for the Bancor Network",
-    "available_eth": "Available: {eth} ETH",
-    "not_enough": "You don't have enough ETH to pay for this",
+    "amount_too_big": "バンカーネットワークには額が大き過ぎます。",
+    "available_eth": "利用可能額: {eth} ETH",
+    "not_enough": "購入するのにETHが不足しています。",
     "pay_with": "Pay with",
     "powered_by": "powered by {bancor_link}",
-    "rate": "Rate",
-    "receive": "Receive",
+    "rate": "レート",
+    "receive": "受け取る",
     "slippage": "Slippage",
     "title": "ETHからMANAへ変換"
   },
   "color_key": {
     "contribution": "貢献",
     "district": "地区",
-    "loading": "Loading",
+    "loading": "読込み中",
     "on_sale": "販売中",
     "plaza": "プラザ",
     "roads": "道路",
@@ -48,14 +48,14 @@
     "yours": "マイランド"
   },
   "contribution": {
-    "proposal": "proposal"
+    "proposal": "提案"
   },
   "derivation_path": {
     "invalid":
       "You have set a wrong derivation path for your wallet. Your derivation path must follow pattern 44'/60|61'/x'/n"
   },
   "estate_edit": {
-    "description": "Description",
+    "description": "説明",
     "edit_estate": "Edit Estate",
     "name": "Name",
     "subtitle":
@@ -73,53 +73,53 @@
     "terms": "利用規約"
   },
   "global": {
-    "acquired_at": "Acquired at {date}",
-    "activity": "Activity",
-    "address_placeholder": "Example: {address}",
-    "atlas": "Atlas",
-    "authorized": "Authorized",
-    "balance": "Balance",
-    "blog": "Blog",
-    "cancel": "Cancel",
-    "change": "Change",
-    "clear": "Clear history",
-    "click_here": "Click here",
-    "community_chat": "Community Chat",
-    "confirm": "Confirm",
-    "connect": "Connect",
-    "connecting": "Connecting",
-    "continue": "Continue",
+    "acquired_at": "{date}に取得しました。",
+    "activity": "取引履歴",
+    "address_placeholder": "例: {address}",
+    "atlas": "地図",
+    "authorized": "認証済み",
+    "balance": "残高",
+    "blog": "ブログ",
+    "cancel": "キャンセル",
+    "change": "変更",
+    "clear": "履歴を削除",
+    "click_here": "こちらをクリック",
+    "community_chat": "コミュニティチャット",
+    "confirm": "確認",
+    "connect": "接続する",
+    "connecting": "接続しています",
+    "continue": "続ける",
     "contributions": "Contributions",
-    "created_at": "Created at {date}",
+    "created_at": "{date}に作成されました。",
     "estate": "Estate",
     "estates": "Estates",
-    "expired_at": "Expired {time}",
-    "expires_in": "Expires {time}",
-    "expires_in_more_than_years": "Expires in over {years} years",
+    "expired_at": "{time}に締め切り済",
+    "expires_in": "締め切りまであと{time}",
+    "expires_in_more_than_years": "締め切りまであと{years}年以上",
     "for": "for",
-    "loading": "Loading",
-    "marketplace": "Marketplace",
+    "loading": "読込み中",
+    "marketplace": "マーケット",
     "mortgage": "Mortgage",
     "mortgages": "Mortgages",
-    "owned_by": "Owned by",
-    "owned_by_link": "Owned by {address_link}",
+    "owned_by": "所有者",
+    "owned_by_link": "所有者： {address_link}",
     "paid_at": "Paid at",
-    "parcels": "Parcels",
-    "profile": "My Land",
+    "parcels": "パーセル区画",
+    "profile": "マイランド",
     "publications": "Publications",
-    "request": "Request",
+    "request": "リクエスト",
     "retry": "Retry",
-    "revoke": "Revoke",
+    "revoke": "取り消す",
     "service_unavailable": "Service unavailable",
-    "settings": "Settings",
-    "sign_in": "Sign In",
+    "settings": "設定",
+    "sign_in": "サインイン",
     "sign_in_notice": "You need to {sign_in_link} to access this page",
     "submit": "Submit",
     "time_left": "Time left",
     "unauthorized": "Unauthorized",
-    "undo": "Undo",
-    "wallet_address": "Wallet address",
-    "website": "Website"
+    "undo": "戻す",
+    "wallet_address": "ウォレットアドレス",
+    "website": "ウェブサイト"
   },
   "homepage": {
     "get_started": "始める",
