--- a/src/Translation/locales/jp.json
+++ b/src/Translation/locales/jp.json
@@ -20,7 +20,7 @@
     "on_sale": "販売中: ",
     "owner": "所有者: {owner}",
     "road": "道路",
-    "your_estate": "Your estate",
+    "your_estate": "あなたの不動産",
     "your_parcel": "あなたの区画"
   },
   "buy_mana": {
@@ -84,7 +84,7 @@
     "change": "変更",
     "clear": "履歴を削除",
     "click_here": "こちらをクリック",
-    "community_chat": "コミュニティチャット",
+    "community_chat": "コミュニティーチャット",
     "confirm": "確認",
     "connect": "接続する",
     "connecting": "接続しています",
@@ -108,7 +108,7 @@
     "profile": "マイランド",
     "publications": "Publications",
     "request": "リクエスト",
-    "retry": "Retry",
+    "retry": "やり直す",
     "revoke": "取り消す",
     "service_unavailable": "サービスは利用できません。",
     "settings": "設定",
@@ -145,27 +145,27 @@
     }
   },
   "mortgage": {
-    "amount": "Amount",
-    "amount_placeholder": "Amount in MANA",
-    "cancel": "Cancel Mortgage",
+    "amount": "総額",
+    "amount_placeholder": "MANA総額",
+    "cancel": "担保をキャンセルする",
     "claim": "Claim parcel",
     "defaulted_in": "Defaulted in",
     "duration": "Duration",
     "duration_placeholder": "Duration in days",
     "errors": {
-      "amount_minimum": "Amount should be greater than {amount}",
+      "amount_minimum": "{amount}より大きい必要があります。",
       "duration_gte_payable":
         "Duration should be greater or equal than payable at days",
-      "maximum_interest_rate": "The rate should be lower than {maximum}",
+      "maximum_interest_rate": "レートは{maximum}より低い必要があります。",
       "minimum_duration": "Duration should be greater than {minimum} days",
       "minimum_interest_rate": "The rate should be greater than {minimum}",
       "minimum_payable": "Payable at should be greater than {minimum} days",
       "parcel_price": "Amount required should be less than parcel price"
     },
-    "expiration": "Request expiration",
+    "expiration": "有効期限を申請する",
     "expiration_placeholder": "Expiration date for the mortgage",
     "interest_rate": "Interest rate",
-    "interest_rate_placeholder": "Interest rate",
+    "interest_rate_placeholder": "利率",
     "oracle": "Oracle contract address",
     "outstanding_amount": "Outstanding amount",
     "partial_payment": "Partial payment",
